# Q-APP-V2

./: .gitignore  13_workflow_devcontainer_v1.md  README.md  SETUP.md
backend/: CLAUDE.md  pyproject.toml
backend/app/: main.py
backend/app/core/: db.py
backend/app/repositories/: comments_repo.py  profile_repo.py  reactions_repo.py  threads_repo.py
backend/app/routers/: __init__.py  auth.py  comments.py  health.py  profile.py  reactions.py  solve.py  threads.py
backend/app/schemas/: __init__.py  comments.py  profile.py  reactions.py  threads.py
backend/app/services/: __init__.py  comments_service.py  cursor.py  profile_service.py  reactions_service.py  solve_service.py  threads_service.py
backend/app/util/: __init__.py  (+4 more)
backend/tests/: test_auth_bootstrap.py  test_auth_session.py  test_comments_repo.py  test_comments_router.py  test_comments_service.py  test_cors_policy.py  test_cursor.py  test_db_pool.py  test_error_handlers_integration.py  test_errors.py  test_health.py  test_idgen.py  test_main_scaffold.py  test_profile_repo.py  test_profile_router.py  test_profile_service.py  test_rate_limit_comments.py  test_rate_limit_threads.py  test_rate_limit_userip.py  test_reactions_repo.py  test_reactions_router.py  test_reactions_service.py  test_request_id_middleware.py  test_router_init.py  test_routers_package.py  test_solve_router.py  test_solve_service.py  test_threads_authoraffiliation_fix.py  test_threads_excerpt_fix.py  test_threads_listNew_contract.py  test_threads_repo.py  test_threads_router.py  test_threads_schemas.py  test_threads_service.py
(+237 files in other folders)
